<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/green_500"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    >

    <ImageView
        android:id="@+id/img_card_result"
        android:layout_width="match_parent"
        android:contentDescription="@string/str_formula"
        android:layout_height="210dp"
        android:src="@drawable/fondo"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linear_detalles"
        />

    <LinearLayout
        android:id="@+id/linear_detalles"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_card_result"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/tv_name_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_name_form"
            style="@style/TextStyleOnGreen"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_first_param"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/str_parametros"
            style="@style/TextStyleOnGreen"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_second_param"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/str_parametros"
            style="@style/TextStyleOnGreen"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_third_param"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/acme"
            android:text="@string/str_parametros"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/str_resultado"
            style="@style/TextStyleOnGreen"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>