<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_form_penta"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    tools:context=".fragments.PentagonalPrismFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtxt_a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/StyleEditText"
                android:hint="@string/str_a" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_a"
            app:errorEnabled="true"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtxt_l"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                style="@style/StyleEditText"
                android:hint="@string/str_l" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_l"
            app:errorEnabled="true"
            android:layout_marginTop="8dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtxt_h"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                style="@style/StyleEditText"
                android:hint="@string/str_h" />
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>